p4/examples/bad/checker/parser-non-struct-output.p4
parser bad_parser(
    packet_in pkt,
    out int the_badness,
) {
    state start {
        transition accept;
    }
}
